--- a/tools-local/targetgroups.props
+++ b/tools-local/targetgroups.props
@@ -2,7 +2,9 @@
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <TargetGroups Include="netcore50">
+      <TargetFramework>netcore50</TargetFramework>
       <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
+      <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Private.NetNative</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETCore,Version=v5.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcore50</NuGetTargetMonikerShort>
@@ -10,7 +12,9 @@
       <CompatibleWith>netstandard1.4</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcore50aot">
+      <TargetFramework>netcore50</TargetFramework>
       <TargetFrameworkIdentifier>.NETCore</TargetFrameworkIdentifier>
+      <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Private.NetNative</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETCore,Version=v5.0</NuGetTargetMoniker>
@@ -20,7 +24,7 @@
       <CompatibleWith>netstandard1.4</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uap10.0.16299aot">
-      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
+      <TargetFramework>uap10.0.16299</TargetFramework>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <NuGetTargetMoniker>UAP,Version=v10.0.16299</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>uap10.0.16299</NuGetTargetMonikerShort>
@@ -29,7 +33,7 @@
       <CompatibleWith>uap10.0.16299;netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uap10.0.16299">
-      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
+      <TargetFramework>uap10.0.16299</TargetFramework>
       <NuGetTargetMoniker>UAP,Version=v10.0.16299</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>uap10.0.16299</NuGetTargetMonikerShort>
       <UWPCompatible>true</UWPCompatible>
@@ -37,7 +41,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uapvnextaot">
-      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
+      <TargetFramework>$(UAPvNextTFM)</TargetFramework>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
@@ -46,7 +50,7 @@
       <CompatibleWith>uapvnext;netstandard2.0</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="uapvnext">
-      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
+      <TargetFramework>$(UAPvNextTFM)</TargetFramework>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
       <UWPCompatible>true</UWPCompatible>
@@ -55,7 +59,7 @@
     </TargetGroups>
     <!-- uap is an alias for uapvNext any/coreclr runtime -->
     <TargetGroups Include="uap">
-      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
+      <TargetFramework>$(UAPvNextTFM)</TargetFramework>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
       <UWPCompatible>true</UWPCompatible>
@@ -64,7 +68,7 @@
     </TargetGroups>
     <!-- uapaot is an alias for uapvNext, aot runtime -->
     <TargetGroups Include="uapaot">
-      <TargetFrameworkIdentifier>UAP</TargetFrameworkIdentifier>
+      <TargetFramework>$(UAPvNextTFM)</TargetFramework>
       <PackageTargetRuntimeSuffix>aot</PackageTargetRuntimeSuffix>
       <NuGetTargetMoniker>$(UAPvNextTFMFull)</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>$(UAPvNextTFM)</NuGetTargetMonikerShort>
@@ -73,7 +77,7 @@
       <CompatibleWith>uap;netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netstandard1.0">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard1.0</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v1.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.0</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -81,7 +85,7 @@
       <UWPCompatible>true</UWPCompatible>
     </TargetGroups>
     <TargetGroups Include="netstandard1.1">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard1.1</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v1.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.1</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -90,7 +94,7 @@
       <Imports>netstandard1.0</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.2">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard1.2</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v1.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.2</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -99,7 +103,7 @@
       <Imports>netstandard1.1</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.3">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard1.3</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v1.3</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.3</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -108,7 +112,7 @@
       <Imports>netstandard1.2</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.4">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard1.4</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v1.4</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.4</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -117,7 +121,7 @@
       <Imports>netstandard1.3</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.5">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard1.5</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v1.5</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.5</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -126,7 +130,7 @@
       <Imports>netstandard1.4</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard1.6">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard1.6</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v1.6</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard1.6</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -135,7 +139,7 @@
       <Imports>netstandard1.5</Imports>
     </TargetGroups>
     <TargetGroups Include="netstandard2.0">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard2.0</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v2.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard2.0</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -145,7 +149,7 @@
     </TargetGroups>
     <!-- netstandard is an alias for netstandard2.0 -->
     <TargetGroups Include="netstandard">
-      <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+      <TargetFramework>netstandard2.0</TargetFramework>
       <NuGetTargetMoniker>.NETStandard,Version=v2.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netstandard2.0</NuGetTargetMonikerShort>
       <!-- By default, netstandard libraries will be held to the UWP compatibility bar;
@@ -154,20 +158,20 @@
       <Imports>netstandard2.0</Imports>
     </TargetGroups>
     <TargetGroups Include="netcoreapp1.0">
-      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
+      <TargetFramework>netcoreapp1.0</TargetFramework>
       <NuGetTargetMoniker>.NETCoreApp,Version=v1.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp1.0</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.6</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcoreapp2.0">
-      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
+      <TargetFramework>netcoreapp2.0</TargetFramework>
       <NuGetTargetMoniker>.NETCoreApp,Version=v2.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp2.0</NuGetTargetMonikerShort>
       <Imports>netcoreapp1.0</Imports>
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcoreapp2.1">
-      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
+      <TargetFramework>netcoreapp2.1</TargetFramework>
       <NuGetTargetMoniker>.NETCoreApp,Version=v2.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp2.1</NuGetTargetMonikerShort>
       <Imports>netcoreapp2.0</Imports>
@@ -175,31 +179,31 @@
     </TargetGroups>
     <!-- netcoreapp is an alias for netcoreapp2.1 -->
     <TargetGroups Include="netcoreapp">
-      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
+      <TargetFramework>netcoreapp2.1</TargetFramework>
       <NuGetTargetMoniker>.NETCoreApp,Version=v2.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp2.1</NuGetTargetMonikerShort>
       <Imports>netcoreapp2.1</Imports>
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="netcoreapp1.2">
-      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
+      <TargetFramework>netcoreapp1.2</TargetFramework>
       <NuGetTargetMoniker>.NETCoreApp,Version=v1.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp1.2</NuGetTargetMonikerShort>
     </TargetGroups>
     <TargetGroups Include="netcoreapp1.2corert">
-      <TargetFrameworkIdentifier>.NETCoreApp</TargetFrameworkIdentifier>
+      <TargetFramework>netcoreapp1.2</TargetFramework>
       <NuGetTargetMoniker>.NETCoreApp,Version=v1.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>netcoreapp1.2</NuGetTargetMonikerShort>
     </TargetGroups>
     <TargetGroups Include="net45">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net45</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.5</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.5</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net45</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.1</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net451">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net451</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.5.1</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.5.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net451</NuGetTargetMonikerShort>
@@ -207,7 +211,7 @@
       <CompatibleWith>netstandard1.2</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net46">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net46</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net46</NuGetTargetMonikerShort>
@@ -215,7 +219,7 @@
       <CompatibleWith>netstandard1.3</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net461">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net461</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6.1</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net461</NuGetTargetMonikerShort>
@@ -223,7 +227,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net462">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net462</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6.2</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net462</NuGetTargetMonikerShort>
@@ -231,7 +235,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net463">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net463</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.6.3</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.3</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net463</NuGetTargetMonikerShort>
@@ -239,7 +243,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net47">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net47</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net47</NuGetTargetMonikerShort>
@@ -247,7 +251,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net471">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net471</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7.1</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net471</NuGetTargetMonikerShort>
@@ -255,7 +259,7 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="net472">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net472</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7.2</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net472</NuGetTargetMonikerShort>
@@ -264,7 +268,7 @@
     </TargetGroups>
     <!-- netfx is an alias for net472 -->
     <TargetGroups Include="netfx">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net472</TargetFramework>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.NETFramework.v4.7.2</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETFramework,Version=v4.7.2</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net472</NuGetTargetMonikerShort>
@@ -272,25 +276,33 @@
       <CompatibleWith>netstandard</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="win8">
+      <TargetFramework>win8</TargetFramework>
       <TargetFrameworkIdentifier>Windows</TargetFrameworkIdentifier>
+      <TargetFrameworkIdentifier>v8.0</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>Windows,Version=v8.0</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>win8</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.1</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="wpa81">
+      <TargetFramework>wpa81</TargetFramework>
       <TargetFrameworkIdentifier>WindowsPhoneApp</TargetFrameworkIdentifier>
+      <TargetFrameworkIdentifier>v8.1</TargetFrameworkIdentifier>
       <NuGetTargetMoniker>WindowsPhoneApp,Version=v8.1</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>wpa81</NuGetTargetMonikerShort>
       <CompatibleWith>netstandard1.2</CompatibleWith>
     </TargetGroups>
     <TargetGroups Include="portable_net45+win8+sl5">
+      <TargetFramework>portable-net45+win8+sl5</TargetFramework>
       <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
+      <TargetFrameworkVersion>v0.0</TargetFrameworkVersion>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Portable.v4.0.Profile47</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETPortable,Version=v0.0,Profile=Profile47</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>portable-net45+win8+sl5</NuGetTargetMonikerShort>
     </TargetGroups>
     <TargetGroups Include="portable_net40+sl4+win8+wp8">
+      <TargetFramework>portable-net40+sl4+win8+wp8</TargetFramework>
       <TargetFrameworkIdentifier>.NETPortable</TargetFrameworkIdentifier>
+      <TargetFrameworkVersion>v0.0</TargetFrameworkVersion>
       <TargetingPackNugetPackageId>Microsoft.TargetingPack.Portable.v4.0.Profile36</TargetingPackNugetPackageId>
       <NuGetTargetMoniker>.NETPortable,Version=v0.0,Profile=Profile36</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>portable-net40+sl4+win8+wp8</NuGetTargetMonikerShort>
@@ -300,7 +312,7 @@
            build when specified directly or BuildAllConfigurations is set to True.  -->
     </TargetGroups>
     <TargetGroups Include="mono">
-      <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
+      <TargetFramework>net463</TargetFramework>
       <NuGetTargetMoniker>.NETFramework,Version=v4.6.3</NuGetTargetMoniker>
       <NuGetTargetMonikerShort>net463</NuGetTargetMonikerShort>
     </TargetGroups>
