--- a/src/System.Runtime.WindowsRuntime/ref/Configurations.props
+++ b/src/System.Runtime.WindowsRuntime/ref/Configurations.props
@@ -2,10 +2,11 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <PackageConfigurations>
-      netcoreapp;
+      netstandard;
     </PackageConfigurations>
     <BuildConfigurations>
       $(PackageConfigurations);
+      netcoreapp;
       uap;
     </BuildConfigurations>
   </PropertyGroup>
