--- a/src/System.ComponentModel.TypeConverter/tests/System.ComponentModel.TypeConverter.Tests.csproj
+++ b/src/System.ComponentModel.TypeConverter/tests/System.ComponentModel.TypeConverter.Tests.csproj
@@ -164,7 +164,14 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\TestIcon.ico" />
-    <EmbeddedResource Include="Resources\TestImage.bmp" />
+    <SupplementalTestData Include="$(PackagesDir)system.componentmodel.typeconverter.testdata\1.0.0\content\**\*.*">
+      <Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </SupplementalTestData>
+    <EmbeddedResource Include="$(PackagesDir)system.componentmodel.typeconverter.testdata\1.0.0\content\bitmaps\TestIcon.ico">
+      <LogicalName>TestIcon.ico</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="$(PackagesDir)system.componentmodel.typeconverter.testdata\1.0.0\content\bitmaps\TestImage.bmp">
+      <LogicalName>TestImage.bmp</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
